Fix "click" events on iOS devices by setting the cursor to "pointer"

--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 body {
     margin: 0;
+
+    /* required for iOS devices */
+    cursor: pointer;
 }
 
 .ph-page__wrapper {
